Swup.js installed and Z-index error fixed

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 3;
+    z-index: 2;
 }
 
 .top-hdr{
